; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_extent.c_extent_rtree_leaf_elms_lookup.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_extent.c_extent_rtree_leaf_elms_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@extents_rtree = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*, i32, i32, i32**, i32**)* @extent_rtree_leaf_elms_lookup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @extent_rtree_leaf_elms_lookup(i32* %0, i32* %1, i32* %2, i32 %3, i32 %4, i32** %5, i32** %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32**, align 8
  %15 = alloca i32**, align 8
  store i32* %0, i32** %9, align 8
  store i32* %1, i32** %10, align 8
  store i32* %2, i32** %11, align 8
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32** %5, i32*** %14, align 8
  store i32** %6, i32*** %15, align 8
  %16 = load i32*, i32** %9, align 8
  %17 = load i32*, i32** %10, align 8
  %18 = load i32*, i32** %11, align 8
  %19 = call i64 @extent_base_get(i32* %18)
  %20 = load i32, i32* %12, align 4
  %21 = load i32, i32* %13, align 4
  %22 = call i32* @rtree_leaf_elm_lookup(i32* %16, i32* @extents_rtree, i32* %17, i64 %19, i32 %20, i32 %21)
  %23 = load i32**, i32*** %14, align 8
  store i32* %22, i32** %23, align 8
  %24 = load i32, i32* %12, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %31, label %26

26:                                               ; preds = %7
  %27 = load i32**, i32*** %14, align 8
  %28 = load i32*, i32** %27, align 8
  %29 = icmp eq i32* %28, null
  br i1 %29, label %30, label %31

30:                                               ; preds = %26
  store i32 1, i32* %8, align 4
  br label %58

31:                                               ; preds = %26, %7
  %32 = load i32**, i32*** %14, align 8
  %33 = load i32*, i32** %32, align 8
  %34 = icmp ne i32* %33, null
  %35 = zext i1 %34 to i32
  %36 = call i32 @assert(i32 %35)
  %37 = load i32*, i32** %9, align 8
  %38 = load i32*, i32** %10, align 8
  %39 = load i32*, i32** %11, align 8
  %40 = call i64 @extent_last_get(i32* %39)
  %41 = load i32, i32* %12, align 4
  %42 = load i32, i32* %13, align 4
  %43 = call i32* @rtree_leaf_elm_lookup(i32* %37, i32* @extents_rtree, i32* %38, i64 %40, i32 %41, i32 %42)
  %44 = load i32**, i32*** %15, align 8
  store i32* %43, i32** %44, align 8
  %45 = load i32, i32* %12, align 4
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %52, label %47

47:                                               ; preds = %31
  %48 = load i32**, i32*** %15, align 8
  %49 = load i32*, i32** %48, align 8
  %50 = icmp eq i32* %49, null
  br i1 %50, label %51, label %52

51:                                               ; preds = %47
  store i32 1, i32* %8, align 4
  br label %58

52:                                               ; preds = %47, %31
  %53 = load i32**, i32*** %15, align 8
  %54 = load i32*, i32** %53, align 8
  %55 = icmp ne i32* %54, null
  %56 = zext i1 %55 to i32
  %57 = call i32 @assert(i32 %56)
  store i32 0, i32* %8, align 4
  br label %58

58:                                               ; preds = %52, %51, %30
  %59 = load i32, i32* %8, align 4
  ret i32 %59
}

declare dso_local i32* @rtree_leaf_elm_lookup(i32*, i32*, i32*, i64, i32, i32) #1

declare dso_local i64 @extent_base_get(i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @extent_last_get(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
